# KNN-Dashboard

./: .replit  ARCHITECTURE.md  CROSS_ANCHOR_RELATIONSHIPS.md  DATA_PRIVACY_ANONYMIZATION.md  ECOSYSTEM_RELATIONSHIP_IDENTIFICATION.md  LEAD_OPPORTUNITY_IDENTIFICATION.md  MODEL_TRAINING_INFERENCE.md  README.md  WHOLESALE_BANKING_RM_ANALYTICS.md  advanced_analytics.py  app.py  data_simulation.py  model_inference.py  model_training.py  pyproject.toml  replit.md  streamlit_cloud_requirements.txt
attached_assets/: Pasted--14-03-08-Processing-dependencies-Prepared-2025-12-08-1_1765202781783.txt  Pasted-Let-s-put-KNN-into-a-very-concrete-banking-case-and-sho_1765181114933.txt  poultry_ecosystem_japfa_example_1765192390343.csv
